Fix overflow issues

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -37,5 +37,4 @@ td
   width: 50%
 
 body
-  overflow-x: hidden;
-  height: auto;
+  overflow: hidden;
